# fastbm25

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING.md  pyproject.toml  test_module.py  test_runner.py
performance_results/: parallel.txt  serial.txt
python/fastbm25/: __init__.py
scripts/: build.py
src/: lib.rs
test/: controlled_test.py  order_test.py  parallel_benchmark.py  performance_test.py  score_performance_test.py
