[tool.poetry]
name = "fastbm25"
version = "0.1.0"
description = "A fast BM25 implementation in Rust"
authors = ["Jon Montgomery <jonmontg@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jonmontg/fastbm25"
repository = "https://github.com/jonmontg/fastbm25"
keywords = ["bm25", "search", "ranking", "information-retrieval", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "3.11.13"
black = "^25.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.0"
isort = "^5.0"
mypy = "^1.0"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "fastbm25"

[tool.poetry.plugins."maturin"]
maturin = "maturin"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
