[tool.poetry]
name = "fastbm25"
version = "0.1.0"
description = "A fast BM25 implementation in Rust"
authors = ["Jon Montgomery <jmontgom543@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jonmontg/fastbm25"
repository = "https://github.com/jonmontg/fastbm25"
keywords = ["bm25", "search", "ranking", "information-retrieval", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

packages = [{include = "fastbm25", from = "python"}]

[tool.poetry.dependencies]
python = ">=3.11.13,<4"
black = "23.1.0"
maturin = "1.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.0"
isort = "5.0"
mypy = "1.0"

[tool.poetry.scripts]
test = "test_runner:main"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "fastbm25"

[tool.poetry.plugins."maturin"]
maturin = "maturin"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
